--- a/scripts/6_figures.Rmd
+++ b/scripts/6_figures.Rmd
@@ -3245,6 +3245,10 @@ ggsave(plot =
 ```{r end}
 env_size(ls())
 
+tmpFiles(current=TRUE,
+         orphan=FALSE, 
+         old=TRUE, 
+         remove=TRUE)
 
 ```
 
